--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,11 @@ jobs:
     
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: OX Security Scan
+        uses: oxsecurity/ox-security-scan@main
+        with:
+          ox_api_key: ${{ secrets.OX_API_KEY }}
           
       - name: Generate Trivy Vulnerability Report
         uses: aquasecurity/trivy-action@master
@@ -89,6 +94,10 @@ jobs:
         run: |
           sudo docker build -t $DOCKER_REPOSITORY/$IMAGE_NAME:$IMAGE_TAG .
           
+      - name: Run OXSecurity image scan
+        run: |
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock oxsecurity/ox-image-scanner:latest scan-image -e OX_API_KEY=${{ secrets.OX_API_KEY }} -e OX_ARTIFACT_NAME=$DOCKER_REPOSITORY/$IMAGE_NAME E -e OX_ARTIFACT_TAG=$IMAGE_TAG    
+          
       - name: Run Trivy vulnerability image scanner
         uses: aquasecurity/trivy-action@master
         with:
@@ -132,10 +141,10 @@ jobs:
           skip-setup-trivy: true
           #vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
-
-      - name: Run AIKIDO image scan
-        run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aikidosecurity/local-scanner image-scan $DOCKER_REPOSITORY/$IMAGE_NAME:$IMAGE_TAG --apikey ${{ secrets.AIKIDO_CI_TOKEN }} 
+      
+      #- name: Run AIKIDO image scan
+      #  run: |
+      #    docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aikidosecurity/local-scanner image-scan $DOCKER_REPOSITORY/$IMAGE_NAME:$IMAGE_TAG --apikey ${{ secrets.AIKIDO_CI_TOKEN }} 
       #github/workflows/scan-output.html
       # --register --registry "CI/CD_andres_images"
       # -e BUILD_JOB_NAME=$CI_JOB_NAME -e BUILD_URL=$CI_JOB_URL -e BUILD_NUMBER=$CI_JOB_ID
@@ -186,21 +195,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
     
-         
-    #  - name: Setting K8s context
-    #    uses: azure/k8s-set-context@v3
-    #    with:
-    #      method: kubeconfig
-    #      kubeconfig: ${{ secrets.KUBECONFIG }}
-    #       context: emea-aguisado-test
-           
-    #  - name: Deploying
-    #    run: |
-    #      export IMAGE_CONTAINER="docker.io/$DOCKER_REPOSITORY/$IMAGE_NAME:$IMAGE_TAG"
-    #      export CONTAINER_NAME="$CONTAINER_NAME"
-    #      export DEPARTMENT="$DEPARTMENT"
-    #      sed -e "s#{{ IMAGE_CONTAINER }}#$IMAGE_CONTAINER#g" -e "s#{{ CONTAINER_NAME }}#$CONTAINER_NAME#g" -e "s#{{ DEPARTMENT }}#$DEPARTMENT#g" "./manifests/dev/deployment.yaml" | 
-    #      kubectl apply -f -
-    #      sed -e "s#{{ CONTAINER_NAME }}#$CONTAINER_NAME#g" -e "s#{{ DEPARTMENT }}#$DEPARTMENT#g" "./manifests/dev/service.yaml" | 
-    #      kubectl apply -f -
+     # - name: Setting K8s context
+     #   uses: azure/k8s-set-context@v3
+     #   with:
+     #     method: kubeconfig
+     #     kubeconfig: ${{ secrets.KUBECONFIG }}
+     #      context: emea-aguisado-test
+      
+      - name: Install kubectl
+        run: |
+          echo "Installing kubectl..."
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+          kubectl version --client
+          
+      - name: Update Kube config and authenticate
+        run: |
+          eks update-kubeconfig --name aws-gtm-se-testing-eks01 --region us-east-1
+          
+      - name: Deploying
+        run: |
+          export IMAGE_CONTAINER="docker.io/$DOCKER_REPOSITORY/$IMAGE_NAME:$IMAGE_TAG"
+          export CONTAINER_NAME="$CONTAINER_NAME"
+          export DEPARTMENT="$DEPARTMENT"
+          sed -e "s#{{ IMAGE_CONTAINER }}#$IMAGE_CONTAINER#g" -e "s#{{ CONTAINER_NAME }}#$CONTAINER_NAME#g" -e "s#{{ DEPARTMENT }}#$DEPARTMENT#g" "./manifests/dev/deployment.yaml" | 
+          kubectl apply -f -
+          sed -e "s#{{ CONTAINER_NAME }}#$CONTAINER_NAME#g" -e "s#{{ DEPARTMENT }}#$DEPARTMENT#g" "./manifests/dev/service.yaml" | 
+          kubectl apply -f -
             
