--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "webpack-merge": "4.1.0",
     "docker-hub-api": "0.5.1",
-    "axe-core": "4.3.5"
+    "axe-core": "4.3.5",
+    "minimist": "0.0.8"
   }
 }
